change route implementation
Signed-off-by: Borginer <ariel.itskovich.il@gmail.com>